--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Cabecera de la página -->
     <header>
       <div class="content p-2">
-        <img src="../assets/logo-fondo.png" alt="LOGO" class="nav-brand">
+        <img src="./assets/logo-fondo.png" alt="LOGO" class="nav-brand">
         <nav class="item-nav">
           <ul>
             <li><a href="#servicios">PELUQUERÍA</a></li>
