Cambios de html

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
     <menu class="fondo-menu">
         <!-- Seccion de servicios -->
         <section>
-            <center><img src="../icons/titulo1.png" alt="servicios" class="nav-brand-1"></center>
+            <center><img src="./icons/titulo1.png" alt="servicios" class="nav-brand-1"></center>
             <div id="servicios"></div>           
             <h2 class="titulo">Nuestros Servicios</h2>
             <div class="container">
                 <div class="card">
-                  <img src="../assets/cuidados_1.jpg" alt="">
+                  <img src="./assets/cuidados_1.jpg" alt="">
                   <h4>Corte de Pelo y Arreglos</h4>
                   <p>Somos expertos en peluquería canina, ofrecemos una atención personalizada considerando la mejor opción según la necesidad de su mascota, realizamos cortes y arreglos estéticos buscando siempre resaltar la belleza natural.</p>
                 </div>
                 <div class="card">
-                  <img src="../assets/cuidados_2.jpg" alt="">
+                  <img src="./assets/cuidados_2.jpg" alt="">
                   <h4>Corte de Uñas y Limpieza</h4>
                   <p>Tratamos a su mascota con mucho cuidado realizando trabajos minuciosos en corte de uñas, limpieza de oregas y drenado de glándulas perianales procurando cuidar el bienstar del can.</p>
                 </div>
                 <div class="card">
-                  <img src="../assets/cuidados_5.JPG" alt="">
+                  <img src="./assets/cuidados_5.JPG" alt="">
                   <h4>Baño y Cepillado</h4>
                   <p>Porque el consentido del hogar, también necesita serenidad, disfrutará de un baño completo, junto con un cepillado usando técnicas manuales que según la raza requiera que permita que su pelo crezca con textura y brillo.</p>
                 </div>
@@ -96,27 +96,27 @@
           <div class="slider-nosotros">          
             <ul>
               <li>
-                <img src="../assets/work2.jpeg" alt="">
+                <img src="./assets/work2.jpeg" alt="">
               </li>
               <li>
-                <img src="../assets/work11a.jpeg" alt="">
+                <img src="./assets/work11a.jpeg" alt="">
               </li>
               <li>
-                <img src="../assets/work13.jpeg" alt="">
+                <img src="./assets/work13.jpeg" alt="">
               </li>
               <li>
-                <img src="../assets/work14.jpeg" alt="">
+                <img src="./assets/work14.jpeg" alt="">
               </li>
               <li>
-                <img src="../assets/work12.jpeg" alt="">
+                <img src="./assets/work12.jpeg" alt="">
               </li>
               <li>
-                <img src="../assets/work7.jpeg" alt="">
+                <img src="./assets/work7.jpeg" alt="">
               </li>
             </ul>            
           </div>
           <div class="container-textos">
-            <img src="../icons/titulo2.png" alt="servicios" class="nav-brand-1">
+            <img src="./icons/titulo2.png" alt="servicios" class="nav-brand-1">
           <h2 class="titulo-rigth">Style Dog</h2>
             <p class="parrafo">Tenemos los servicios que más necesita para sus mascotas, ofrecemos lo mejor en peluquería canina, con una atención amable y profesional que le brinda todo lo necesario para satisfacer las necesidades individuales con un acabado integral. Nuestro compromiso con usted es priorizar la salud de su mascota enfocandonos en soluciones para ayudarlo a que se vea y se sienta bien.              
             <br>
@@ -135,28 +135,28 @@
               </path>
             </svg>
           </div>
-          <center><img src="../icons/ubicacion.png" alt="CONTACTO" class="nav-brand-3"></center>
+          <center><img src="./icons/ubicacion.png" alt="CONTACTO" class="nav-brand-3"></center>
           <h2 class="titulo-contacto">Contáctanos</h2>
             <p class="parrafo-contacto">
               Visítanos en nuestro local. 
             </p>
               <div class="contacto">
                 <div class="card-contact1">
-                  <img src="../icons/telefono1.png" alt="">
+                  <img src="./icons/telefono1.png" alt="">
                   <h3>Teléfono</h3>
                   <p>
                   098 699 3802
                   </p>
                 </div>
                 <div class="card-contact">
-                  <img src="../icons/ubicacion_1.png" alt="">
+                  <img src="./icons/ubicacion_1.png" alt="">
                   <h3>Dirección</h3>
                   <p>
                   San Miguel de Anagaes N-53 y Avigiras frente al Colegio ISM
                   </p>
                 </div>
                 <div class="card-contact2">
-                  <img src="../icons/correo.png" alt="">
+                  <img src="./icons/correo.png" alt="">
                   <h3>Email</h3>
                   <p>jazu121106@hotmail.es</p>
                 </div>
@@ -174,103 +174,103 @@
             </svg>
           </div>
           <div id="galeria"></div>
-          <center><img src="../icons/galeria.png" alt="GALERIA" class="nav-brand-3"></center>
+          <center><img src="./icons/galeria.png" alt="GALERIA" class="nav-brand-3"></center>
           <h2>Galeria de Cortes</h2>
           <section class="galeria">
-            <a href="#img1"><img src="../assets/1.jpeg" alt="Style1"></a>
-            <a href="#img2"><img src="../assets/2.jpeg" alt="Style1"></a>
-            <a href="#img3"><img src="../assets/3.jpeg" alt="Style1"></a>
-            <a href="#img4"><img src="../assets/15.jpeg" alt="Style1"></a>
-            <a href="#img5"><img src="../assets/5.jpeg" alt="Style1"></a>
-            <a href="#img6"><img src="../assets/6.jpeg" alt="Style1"></a>
-            <a href="#img7"><img src="../assets/7.jpeg" alt="Style1"></a>
-            <a href="#img8"><img src="../assets/8.jpeg" alt="Style1"></a>
-            <a href="#img9"><img src="../assets/9.jpeg" alt="Style1"></a>
-            <a href="#img10"><img src="../assets/10.jpeg" alt="Style1"></a>
-            <a href="#img11"><img src="../assets/11.jpeg" alt="Style1"></a>
-            <a href="#img12"><img src="../assets/12.jpeg" alt="Style1"></a>           
+            <a href="#img1"><img src="./assets/1.jpeg" alt="Style1"></a>
+            <a href="#img2"><img src="./assets/2.jpeg" alt="Style1"></a>
+            <a href="#img3"><img src="./assets/3.jpeg" alt="Style1"></a>
+            <a href="#img4"><img src="./assets/15.jpeg" alt="Style1"></a>
+            <a href="#img5"><img src="./assets/5.jpeg" alt="Style1"></a>
+            <a href="#img6"><img src="./assets/6.jpeg" alt="Style1"></a>
+            <a href="#img7"><img src="./assets/7.jpeg" alt="Style1"></a>
+            <a href="#img8"><img src="./assets/8.jpeg" alt="Style1"></a>
+            <a href="#img9"><img src="./assets/9.jpeg" alt="Style1"></a>
+            <a href="#img10"><img src="./assets/10.jpeg" alt="Style1"></a>
+            <a href="#img11"><img src="./assets/11.jpeg" alt="Style1"></a>
+            <a href="#img12"><img src="./assets/12.jpeg" alt="Style1"></a>           
           </section>
           <!-- Transicion de imagenes -->
           <article class="light-box" id="img1">
             <a href="#img12" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/1.jpeg" alt="">
+            <img src="./assets/1.jpeg" alt="">
             <a href="#img2" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img2">
             <a href="#img1" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/2.jpeg" alt="">
+            <img src="./assets/2.jpeg" alt="">
             <a href="#img3" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img3">
             <a href="#img2" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/3.jpeg" alt="">
+            <img src="./assets/3.jpeg" alt="">
             <a href="#img4" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img4">
             <a href="#img3" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/15.jpeg" alt="">
+            <img src="./assets/15.jpeg" alt="">
             <a href="#img5" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img5">
             <a href="#img4" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/5.jpeg" alt="">
+            <img src="./assets/5.jpeg" alt="">
             <a href="#img6" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img6">
             <a href="#img5" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/6.jpeg" alt="">
+            <img src="./assets/6.jpeg" alt="">
             <a href="#img7" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img7">
             <a href="#img6" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/7.jpeg" alt="">
+            <img src="./assets/7.jpeg" alt="">
             <a href="#img8" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img8">
             <a href="#img7" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/8.jpeg" alt="">
+            <img src="./assets/8.jpeg" alt="">
             <a href="#img9" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img9">
             <a href="#img8" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/9.jpeg" alt="">
+            <img src="./assets/9.jpeg" alt="">
             <a href="#img10" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img10">
             <a href="#img9" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/10.jpeg" alt="">
+            <img src="./assets/10.jpeg" alt="">
             <a href="#img11" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img11">
             <a href="#img10" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/11.jpeg" alt="">
+            <img src="./assets/11.jpeg" alt="">
             <a href="#img12" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></i></a>            
           </article>
 
           <article class="light-box" id="img12">
             <a href="#img11" class="next"><i class="fas fa-arrow-left"></i></a>
-            <img src="../assets/12.jpeg" alt="">
+            <img src="./assets/12.jpeg" alt="">
             <a href="#img1" class="next"><i class="fas fa-arrow-right"></i></a>
             <a href="#" class="close"><i class="fas fa-times-circle"></a>            
           </article>
